syntax = "proto3";
package greeting;

option java_package = "com.bolsadeideas.grcp.greet";
option java_multiple_files = true;

service GreetingService {

  // UNARY COMMUNICATION:
  // 1 CLIENT REQUEST -> 1 SERVER RESPONSE
  rpc greet(GreetingRequest) returns (GreetingResponse);

  // SERVER STREAM COMMUNICATION:
  // 1 CLIENT REQUEST -> N SERVER RESPONSES
  rpc greetManyTimes(GreetingRequest) returns (stream GreetingResponse);

  // CLIENT STREAM COMMUNICATION:
  // N CLIENT REQUESTS -> 1 SERVER RESPONSE
  rpc longGreet(stream GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
  string first_name = 1;
}

message GreetingResponse {
  string result = 1;
}